[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/weapon_free.png" type="Texture" id=1]
[ext_resource path="res://characters/player/levelupchosse.gd" type="Script" id=2]
[ext_resource path="res://assets/bag.png" type="Texture" id=3]
[ext_resource path="res://assets/FLORLRG_.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/shadow.png" type="Texture" id=5]
[ext_resource path="res://assets/new_styleboxtexture.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/essence.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/sound_button.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/ui/collect-points-190037.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/ui/border.png" type="Texture" id=10]
[ext_resource path="res://assets/PirataOne-Regular.ttf" type="DynamicFontData" id=11]

[sub_resource type="Animation" id=196]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Bag:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.917647, 0.905882, 0.878431, 0 ), Color( 0.917647, 0.905882, 0.878431, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("option1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("option2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("option3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CPUParticles2D:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.470588 ) ]
}

[sub_resource type="Gradient" id=188]
offsets = PoolRealArray( 0, 0.00757576, 0.44697, 0.954545, 0.969697, 0.984848 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0.088, 0.088, 0.088, 1, 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=195]
size = 205
outline_size = 10
outline_color = Color( 0.054902, 0.0470588, 0.105882, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=193]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=189]

[sub_resource type="StyleBoxTexture" id=190]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 21.3412, 52.4196, 53.4314, 0.54902 )

[sub_resource type="AtlasTexture" id=192]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=191]
atlas = ExtResource( 1 )
region = Rect2( 160, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=185]
atlas = ExtResource( 1 )
region = Rect2( 96, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=183]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=184]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=194]
atlas = ExtResource( 1 )
region = Rect2( 128, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=186]
atlas = ExtResource( 1 )
region = Rect2( 224, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=182]
atlas = ExtResource( 1 )
region = Rect2( 256, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=187]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": true,
"name": "#default",
"speed": 5.0
}, {
"frames": [ SubResource( 192 ) ],
"loop": true,
"name": "axerang",
"speed": 5.0
}, {
"frames": [ SubResource( 191 ) ],
"loop": true,
"name": "bubble",
"speed": 5.0
}, {
"frames": [ SubResource( 185 ) ],
"loop": true,
"name": "cristal",
"speed": 5.0
}, {
"frames": [ SubResource( 183 ) ],
"loop": true,
"name": "crossbow",
"speed": 5.0
}, {
"frames": [ SubResource( 184 ) ],
"loop": true,
"name": "dagger",
"speed": 5.0
}, {
"frames": [ SubResource( 194 ) ],
"loop": true,
"name": "firesparks",
"speed": 5.0
}, {
"frames": [ SubResource( 186 ) ],
"loop": true,
"name": "potion",
"speed": 5.0
}, {
"frames": [ SubResource( 182 ) ],
"loop": true,
"name": "scythe",
"speed": 5.0
}, {
"frames": [ SubResource( 187 ) ],
"loop": true,
"name": "sword",
"speed": 5.0
} ]

[node name="levelupchosse" type="CanvasLayer"]
pause_mode = 2
scale = Vector2( 0.4, 0.4 )
transform = Transform2D( 0.4, 0, 0, 0.4, 0, 0 )
script = ExtResource( 2 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/start = SubResource( 196 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2560.0
margin_bottom = 1503.0
color = Color( 0, 0, 0, 0.545098 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 1280, -120 )
scale = Vector2( 4, 2.6 )
amount = 40
lifetime = 5.0
preprocess = 7.0
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 300, 1 )
spread = 180.0
gravity = Vector2( 0, 60 )
scale_amount = 3.0
color_ramp = SubResource( 188 )

[node name="Bag" type="Sprite" parent="."]
modulate = Color( 0.917647, 0.905882, 0.878431, 1 )
position = Vector2( 1280, 703.125 )
scale = Vector2( 10.5, 10.5119 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 1000.0
margin_top = 200.0
margin_right = 2119.0
margin_bottom = 465.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 195 )
text = "CHOSSE WEAPON"
align = 1

[node name="Border" type="Sprite" parent="Label"]
modulate = Color( 0.776471, 0.662745, 0.596078, 1 )
show_behind_parent = true
position = Vector2( 560, 117.5 )
scale = Vector2( 29.0909, 5.56818 )
texture = ExtResource( 10 )

[node name="option1" type="Button" parent="."]
margin_left = 1240.0
margin_top = 380.0
margin_right = 1327.0
margin_bottom = 417.0
rect_scale = Vector2( 3.59349, 3.52969 )
custom_fonts/font = SubResource( 193 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 189 )
custom_styles/disabled = SubResource( 190 )
custom_styles/normal = ExtResource( 6 )
text = "test"
icon_align = 1

[node name="Shadow" type="Sprite" parent="option1"]
modulate = Color( 0.384314, 0.384314, 0.384314, 1 )
position = Vector2( -42.5, 15.008 )
scale = Vector2( 2.5, 2.813 )
texture = ExtResource( 5 )

[node name="icon" type="AnimatedSprite" parent="option1"]
position = Vector2( -42.5, 15.008 )
scale = Vector2( 2.031, 2.031 )
frames = SubResource( 5 )
animation = "scythe"

[node name="press1" type="Button" parent="option1"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -80.0
margin_top = -12.0
margin_right = 87.0
margin_bottom = 50.0

[node name="option2" type="Button" parent="."]
margin_left = 1242.5
margin_top = 640.0
margin_right = 1328.5
margin_bottom = 684.0
rect_scale = Vector2( 3.593, 3.53 )
custom_fonts/font = SubResource( 193 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 189 )
custom_styles/disabled = SubResource( 190 )
custom_styles/normal = ExtResource( 6 )
text = "test"

[node name="Shadow" type="Sprite" parent="option2"]
modulate = Color( 0.384314, 0.384314, 0.384314, 1 )
position = Vector2( -45, 12.508 )
scale = Vector2( 2.5, 2.813 )
texture = ExtResource( 5 )

[node name="icon" type="AnimatedSprite" parent="option2"]
position = Vector2( -47, 13.008 )
scale = Vector2( 2.031, 2.031 )
frames = SubResource( 5 )
animation = "bubble"

[node name="press2" type="Button" parent="option2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -80.0
margin_top = -17.0
margin_right = 87.0
margin_bottom = 50.0

[node name="option3" type="Button" parent="."]
margin_left = 1242.5
margin_top = 880.0
margin_right = 1328.5
margin_bottom = 921.0
rect_scale = Vector2( 3.593, 3.53 )
custom_fonts/font = SubResource( 193 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 189 )
custom_styles/disabled = SubResource( 190 )
custom_styles/normal = ExtResource( 6 )
text = "test"

[node name="Shadow" type="Sprite" parent="option3"]
modulate = Color( 0.384314, 0.384314, 0.384314, 1 )
position = Vector2( -42.5, 15.0079 )
scale = Vector2( 2.5, 2.813 )
texture = ExtResource( 5 )

[node name="icon" type="AnimatedSprite" parent="option3"]
position = Vector2( -42, 15.5079 )
scale = Vector2( 2.031, 2.031 )
frames = SubResource( 5 )
animation = "cristal"

[node name="press3" type="Button" parent="option3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -80.0
margin_top = -12.0
margin_right = 87.0
margin_bottom = 50.0

[node name="buttonsound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 12.5 )
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 1.5

[node name="sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 12.5 )
stream = ExtResource( 9 )
pitch_scale = 1.1
autoplay = true
attenuation = 0.435275
bus = "Effects"

[connection signal="pressed" from="option1" to="." method="_on_option1_pressed"]
[connection signal="pressed" from="option1/press1" to="." method="_on_press1_pressed"]
[connection signal="pressed" from="option2" to="." method="_on_option2_pressed"]
[connection signal="pressed" from="option2/press2" to="." method="_on_press2_pressed"]
[connection signal="pressed" from="option3" to="." method="_on_option3_pressed"]
[connection signal="pressed" from="option3/press3" to="." method="_on_press3_pressed"]
